# signature_poc

./: README.md
o1js/: package.json  pnpm-lock.yaml  vite.config.ts
o1js/web/: index.html  signature_poc.json
o1js/web/src/: App.tsx  verifier.ts
rust/: Cargo.toml
rust/src/: main.rs
