[package]
name = "signature-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mina-signer = { git = "https://github.com/o1-labs/proof-systems" }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems" }
o1-utils = { git = "https://github.com/o1-labs/proof-systems" }
serde_json = "1.0.115"
bitcoin = "0.31.1"
